15746
scalac - classpath javaPart.jar ./test/Child.scala

scalac.bat : .\test\Child.scala:5: error: class ActualClass needs to be abstract, since method f in class AChild of type (x$$1: test.TopLevelP
arent[A]#Inner2)Unit is not defined
class ActualClass[A] extends AnotherChild[A] {
      ^
.\test\Child.scala:6: error: method f overrides nothing
  override def f(ic: Inner2) = ()
               ^
two errors found

